@@ -1,3 +1,7 @@
+2011-11-30  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
+
+	* Feature: allow redirects for various domains
+
 2011-11-17  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
 	* Manual update: prefer absRefPrefix to baseUrl from now on
